--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "~9.1.7",
+    "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "~9.1.9",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
