--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./src/spherecompiler.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -96,7 +98,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "./src/spherecompiler.js"
+            ]
           }
         },
         "lint": {
